--- a/index.html
+++ b/index.html
@@ -1,146 +1,150 @@
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>
-   CyberPort
-  </title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="style.css">
- </head>
- 
- <body>
-  <header>
-   <nav class="nav-left">
-    <a href="#">
-     Home
-    </a>
-    <a href="#">
-     Projects
-    </a>
-    <a href="#">
-     About
-    </a>
-   </nav>
-   <h1>
-    CyberPort
-   </h1>
-   <nav class="nav-right">
-    <a href="#">
-     Contact
-    </a>
-   </nav>
-  </header>
-  <div class="hero">
-   <h2>
-    Welcome to the Future
-   </h2>
-   <img alt="Futuristic cityscape with neon lig" src="./images/center.png" >
-  </div>
-  <div class="gallery">
-   <div class="gallery-item">
-    <img alt="Neon cityscape" src="./images/one.png" \>
-    <h3>
-     Neon Skyscraper
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Digital art with vibrant colors" src="./images/one.png" \>
-    <h3>
-     Digital Art
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Cyber city at night" src="./images/one.png" \>
-    <h3>
-     Cyber City
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Neon skyline with moon" src="./images/one.png" \>
-    <h3>
-     Neon Skyline
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Futuristic city with neon lights" src="./images/one.png" \>
-    <h3>
-     Neon Preview
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Person using virtual reality headset" src="./images/one.png" \>
-    <h3>
-     Virtual Reality
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Futuristic cityscape" src="./images/one.png" \>
-    <h3>
-     Future Visions
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Neon street with reflections" src="./images/one.png" \>
-    <h3>
-     Neon Street
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-   <div class="gallery-item">
-    <img alt="Digital control panel" src="./images/one.png" \>
-    <h3>
-     Digital Panel
-    </h3>
-    <p>UI/UX Design</p>
-   </div>
-  </div>
-  
-  <div class="contact">
-   <h3>
-    Contact Me
-   </h3>
-   <p>
-    Reach out for collaborations or queries
-   </p>
-   <form>
-    <div class="input">
-     <input placeholder="Name" type="text"/>
-     <input placeholder="Email" type="email"/>
-     <input placeholder="Phone" type="text"/>
-     <input placeholder="Subject" type="text"/>
-     <input placeholder="Company" type="text"/>
+
+<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>CyberPort</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <header>
+        <nav class="nav-left">
+            <a href="#">Home</a>
+            <a href="#">Projects</a>
+            <a href="#">About</a>
+        </nav>
+        <h1>CyberPort</h1>
+        <nav class="nav-right">
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <div class="main">
+        <div class="hero">
+            <h2>Welcome to the Future</h2>
+            <img alt="Futuristic cityscape with neon lig" src="./images/center.png">
+        </div>
+        <div class="gallery">
+            <div class="gallery-row1">
+                <div class="gallery-item">
+                    <img alt="Neon cityscape" src="images/one.png" \>
+                    <h3>Neon Skyliner</h3>
+                    <p>UI/UX Design</p>
+                </div>
+                <div class="gallery-item">
+                    <img alt="Digital art with vibrant colors" src="images/two.png" \>
+                    <h3>Glitch Art</h3>
+                    <p>Digital Art</p>
+                </div>
+                <div class="gallery-item">
+                    <img alt="Cyber city at night" src="images/three.png" \>
+                    <h3>Cyber City</h3>
+                    <p>3D Modeling</p>
+                </div>
+            </div>
+            <div class="gallery-row1">
+                <div class="gallery-item">
+                    <img alt="Neon skyline with moon" src="images/four.png" \>
+                    <h3>Neon Dreams</h3>
+                    <p>Animation</p>
+                </div>
+                <div class="gallery-item">
+                    <img alt="Futuristic city with neon lights" src="images/five.png" \>
+                    <h3>Techno Waves</h3>
+                    <p>Music Video</p>
+                </div>
+                <div class="gallery-item">
+                    <img alt="Person using virtual reality headset" src="images/six.png" \>
+                    <h3>Virtual Reality</h3>
+                    <p>VR Experience</p>
+                </div>
+            </div>
+            <div class="gallery-row1">
+                <div class="gallery-item">
+                    <img alt="Futuristic cityscape" src="images/seventh.png" \>
+                    <h3>Future Visions</h3>
+                    <p>Concept Art</p>
+                </div>
+                <div class="gallery-item">
+                    <img alt="Neon street with reflections" src="images/eight.png" \>
+                    <h3>Neon Noir</h3>
+                    <p>Short Film</p>
+                </div>
+                <div class="gallery-item">
+                    <img alt="Digital control panel" src="images/nine.png" \>
+                    <h3>Digital Pulse</h3>
+                    <p>Interactive Media</p>
+                </div>
+            </div>
+        </div>
+        <div class="showcase-project-outer">
+            <div class="showcase-project-inner">
+                <div class="showcase-heading">
+                    <h1>Showcase Projects</h1>
+                </div>
+                <div class="showcase-grid">
+                    <div class="showcase-box">
+                        <img src="images/tenth.png" alt="">
+                        <div class="showcase-text">
+                            <h1>Neon Skyline</h1>
+                            <p>Explore the Neon Skyline project</p>
+                        </div>
+                        <button>View Project</button>
+
+                    </div>
+                    <div class="showcase-box">
+                        <img src="images/eleventh.png" alt="">
+                        <div class="showcase-text">
+                            <h1>Glitch Art</h1>
+                            <p>Dive into the Glitch Art Project</p>
+                        </div>
+                        <button>View Project</button>
+                    </div>
+                    <div class="showcase-box">
+                        <img src="images/twelfth.png" alt="">
+                        <div class="showcase-text">
+                            <h1>Cyber City</h1>
+                            <p>Explore the Cyber City project</p>
+                        </div>
+                        <button>View Project</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <div class="verification">
+            <div class="verification-no">
+                <h1>Contact Me</h1>
+                <p>Reach out for collaborations or inquiries.</p>
+                <div class="form-input">
+                    <form action="">
+                        <input type="number" placeholder="0">
+                        <input type="number" placeholder="0">
+                        <input type="number" placeholder="0">
+                        <input type="number" placeholder="0">
+                        <input type="number" placeholder="0">
+                    </form>
+                </div>
+                <button>Submit</button>
+                <p>Skip</p>
+            </div>
+        </div>
     </div>
-    <textarea placeholder="Message"></textarea>
-    <button type="submit">
-     Send
-    </button>
-   </form>
-  </div>
-  <div class="social">
-   <h3>
-    Connect with me on social media
-   </h3>
-   <input placeholder="Enter your email" type="email"/>
-   <button>
-    Subscribe
-   </button>
-   <div>
-    <i class="fab fa-facebook">
-    </i>
-    <i class="fab fa-twitter">
-    </i>
-    <i class="fab fa-instagram">
-    </i>
-   </div>
-  </div>
- </body>
+    <div class="social">
+        <div class="social-inner">
+            <h3>Connect with me on social media</h3>
+            <input placeholder="Enter your email" type="email" />
+            <button>Subscribe</button>
+            <div>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>     
+            </div>
+        </div>
+    </div>
+</body> 
 </html>
